--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node dist/server.mjs",
+    "start": "node server.js",
     "dev": "node server.mjs",
     "nodemon": "nodemon server.mjs"
   },
